# glads-borehole-calibration

./: .gitignore  README.md  make_zenodo.sh  post_borehole_config.py  post_synthetic_config.py  pyproject.toml  requirements.txt  test_config.py  test_install.sh  train_config.py
analysis/: README.md
analysis/borehole/: compare_models.py  compare_posterior.py  draw_posterior.py  fit_model.py  fit_summer.py  fit_winter.py  job_script.sh  plot_posterior.py  plot_posterior_minimal.py  plot_separate_calibration.py  plot_theta_posterior_minimal.py  post_theta_std.csv  run_analysis.sh  run_fit.sh  run_summer.sh  run_winter.sh  submit_aggregate.sh  submit_compare.sh  submit_fit.sh  submit_summer.sh  submit_test.sh  submit_winter.sh
analysis/leave_one_out/: coverage.py  fit_model.py  job_script.sh  run_analysis.sh  run_fit.sh  single_case.sh
analysis/numerics/: numerics.py  numerics_config.py
analysis/sensitivity/: sensitivity.py
analysis/synthetic/: compare_gp_glads_posteriors.py  compare_models.py  compute_test_preds.py  compute_test_preds.sh  draw_posterior.py  eval_gp.py  eval_pcs.py  fit_model.py  job_script.sh  node_choice.py  plot_posterior.py  plot_posterior_minimal.py  plot_theta_posterior_minimal.py  post_theta_m512_phys.csv  post_theta_m512_std.csv  resubmit_script.sh  run_analysis.sh  run_fit.sh
data/: README.md  plot_domain.py
data/processed/: GL12-2A_Pw_daily_2012.txt
issm/expdesign/: greenland_test_log.csv  greenland_test_physical.csv  greenland_train_log.csv  (+5 more)
utils/: aggregate_outputs.py  expdesign.py  models.py  run_job.py  tools.py  trace_plot.py
(+51 files in other folders)
